opam-version: "1.2"
name: "cuite"
version: "~unknown"
synopsis: "Bindings to Qt library"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/cuite"
bug-reports: "https://github.com/let-def/cuite/issues"
license: "MIT"
dev-repo: "git@github.com:let-def/cuite.git"
build: [
  # ["dune" "subst"] {pinned}
  [make "CUITE_LIBDIR=%{cuite:lib}%" "JOBS=%{jobs}%" "build"]
]
depends: [
  "dune" {build}
]
